--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,14 @@ img {
   margin-right: 50px;
 }
 
+.header-mail-icon {
+  width: 16px;
+  height: 12px;
+  margin-right: 10px;
+  align-items: center;
+  fill: currentColor;
+}
+
 .header-tel {
   display: block;
   padding-bottom: 32px;
@@ -130,6 +138,12 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
+}
+.header-tel-icon {
+  width: 10px;
+  height: 16px;
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .header-link:hover,
@@ -147,6 +161,14 @@ img {
 /* ---------------------ГЛАВНЫЙ ЗАГОЛОВОК------------------- */
 .main-section {
   background: #2f303a;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(/images/Img-min.jpg);
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 1600px;
+
   margin-left: auto;
   margin-right: auto;
   padding-top: 200px;
@@ -173,7 +195,7 @@ img {
   margin-top: 30px;
   padding: 10px;
   border-radius: 4px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 10px 4px 4px rgba(0, 0, 0, 0.15);
 
   font-family: inherit;
   font-weight: 700;
@@ -206,10 +228,16 @@ img {
 .list-text {
   width: 270px;
 }
+
 .list-text:not(:last-child) {
   margin-right: 30px;
 }
-
+.page-section-icon {
+  padding: 25px 100px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
 .head-section {
   margin-bottom: 10px;
   font-weight: 700;
@@ -297,11 +325,38 @@ img {
 
 .work-person {
   margin-top: 10px;
+  margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
+}
+.list-social-team {
+  display: flex;
+  justify-content: center;
+}
+.social-team-item {
+  width: 44px;
+  height: 44px;
+}
+.social-team-item + .social-team-item {
+  margin-left: 10px;
+}
+.social-team-link {
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-team-icon {
+  display: flex;
+  justify-content: center;
 }
 
 /* -------------КОНТАКТЫ----------------- */
