--- a/css/styles.css
+++ b/css/styles.css
@@ -300,6 +300,7 @@ img {
 .list-team {
   display: flex;
   justify-content: center;
+  background-color: #ffffff;
 }
 .list-team > li:not(:last-child) {
   margin-right: 30px;
@@ -347,6 +348,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: #ffffff;
+  color: #afb1b8;
   border-radius: 50%;
 
   display: flex;
@@ -355,8 +357,14 @@ img {
 }
 
 .social-team-icon {
+  fill: currentColor;
   display: flex;
   justify-content: center;
+}
+.social-team-link:hover,
+.social-team-link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
 }
 
 /* -------------КОНТАКТЫ----------------- */
