--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ img {
 }
 /* ---------------------ГЛАВНЫЙ ЗАГОЛОВОК------------------- */
 .main-section {
-  background: #2f303a;
+  /* background: #2f303a; */
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(/images/Img-min.jpg);
 
