--- a/css/styles.css
+++ b/css/styles.css
@@ -552,12 +552,16 @@ img {
   color: var(--header-text-color);
   background: #f5f4fa;
   border: none;
+  border-radius: 4px;
 }
 
 .btn-portfolio:hover,
 .btn-portfolio:focus {
   color: #ffff;
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 /* ----------Галерея------------ */
 
@@ -567,6 +571,18 @@ img {
   justify-content: space-evenly;
   margin-left: -30px;
   margin-top: -30px;
+}
+.portfolio-link {
+  display: block;
+  color: inherit;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .img-list {
   flex-basis: calc(100% / 3 - 30px);
