--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ img {
 .main-section {
   background: #2f303a;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(/images/Img-min.jpg);
+    url(../images/Img-min.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
